--- a/_gulp/_pug/our-team.pug
+++ b/_gulp/_pug/our-team.pug
@@ -54,60 +54,69 @@ html(lang="ru")
                   li: a(href="#!") Татуаж и микроблейдинг
 
               .our-team__carousel
-                .our-team__block
-                  .our-team__block-thumb
-                    img(src="", alt="")
-                  .our-team__block-content
-                    .h3 Наталья Михайловна
-                    p Генеральный директор
-                .our-team__block
-                  .our-team__block-thumb
-                    img(src="", alt="")
-                  .our-team__block-content
-                    .h3 Марина Тарабукина
-                    p Косметолог (Стаж 17 лет)
-                .our-team__block
-                  .our-team__block-thumb
-                    img(src="", alt="")
-                  .our-team__block-content
-                    .h3 Майя Закерова
-                    p Врач-косметолог (стаж 15 лет)
-                .our-team__block
-                  .our-team__block-thumb
-                    img(src="", alt="")
-                  .our-team__block-content
-                    .h3 Лариса Юрьева
-                    p Косметолог (стаж 15 лет)
-                .our-team__block
-                  .our-team__block-thumb
-                    img(src="", alt="")
-                  .our-team__block-content
-                    .h3 Наталья Рындина
-                    p Мастер ногтевого сервиса
-                .our-team__block
-                  .our-team__block-thumb
-                    img(src="", alt="")
-                  .our-team__block-content
-                    .h3 Марина Климова
-                    p Мастер ногтевого сервиса
-                .our-team__block
-                  .our-team__block-thumb
-                    img(src="", alt="")
-                  .our-team__block-content
-                    .h3 Елена Храмова
-                    p Парикмахер-стилист
-                .our-team__block
-                  .our-team__block-thumb
-                    img(src="", alt="")
-                  .our-team__block-content
-                    .h3 Юрий Сапалёв
-                    p Парикмахер-стилист
-                .our-team__block
-                  .our-team__block-thumb
-                    img(src="", alt="")
-                  .our-team__block-content
-                    .h3 Татьяна Дозорцева
-                    p Парикмахер-стилист, визажист
+                div
+                  .our-team__block
+                    .our-team__block-thumb
+                      img(src="./tmp/team-img-1.png", alt="")
+                    .our-team__block-content
+                      h2 Наталья Михайловна
+                      p Генеральный директор
+                div
+                  .our-team__block
+                    .our-team__block-thumb
+                      img(src="./tmp/team-img-2.png", alt="")
+                    .our-team__block-content
+                      h2 Марина Тарабукина
+                      p Косметолог (Стаж 17 лет)
+                div
+                  .our-team__block
+                    .our-team__block-thumb
+                      img(src="./tmp/team-img-3.png", alt="")
+                    .our-team__block-content
+                      h2 Майя Закерова
+                      p Врач-косметолог (стаж 15 лет)
+                div
+                  .our-team__block
+                    .our-team__block-thumb
+                      img(src="./tmp/team-img-4.png", alt="")
+                    .our-team__block-content
+                      h2 Лариса Юрьева
+                      p Косметолог (стаж 15 лет)
+                div
+                  .our-team__block
+                    .our-team__block-thumb
+                      img(src="./tmp/team-img-5.png", alt="")
+                    .our-team__block-content
+                      h2 Наталья Рындина
+                      p Мастер ногтевого сервиса
+                div
+                  .our-team__block
+                    .our-team__block-thumb
+                      img(src="./tmp/team-img-6.png", alt="")
+                    .our-team__block-content
+                      h2 Марина Климова
+                      p Мастер ногтевого сервиса
+                div
+                  .our-team__block
+                    .our-team__block-thumb
+                      img(src="./tmp/team-img-7.png", alt="")
+                    .our-team__block-content
+                      h2 Елена Храмова
+                      p Парикмахер-стилист
+                div
+                  .our-team__block
+                    .our-team__block-thumb
+                      img(src="./tmp/team-img-8.png", alt="")
+                    .our-team__block-content
+                      h2 Юрий Сапалёв
+                      p Парикмахер-стилист
+                div
+                  .our-team__block
+                    .our-team__block-thumb
+                      img(src="./tmp/team-img-9.png", alt="")
+                    .our-team__block-content
+                      h2 Татьяна Дозорцева
+                      p Парикмахер-стилист, визажист
 
     include ./_include/_footer
     //- div(style="height: 1000px; background-color: #000")
