--- a/_gulp/_pug/1-services.pug
+++ b/_gulp/_pug/1-services.pug
@@ -50,35 +50,140 @@ html(lang="ru")
                 div
                   .one-services__block
                     .one-services__block-thumb
-                      img(src="./tmp/team-img-1.png", alt="")
+                      a(href="#!")
+                        img(src="./tmp/services-img-1.png", alt="")
                     .one-services__block-content
-                      h2 Наталья Михайловна
-                      p Генеральный директор
+                      h2
+                        a(href="#!") Подология
                 div
                   .one-services__block
                     .one-services__block-thumb
-                      img(src="./tmp/team-img-2.png", alt="")
+                      a(href="#!")
+                        img(src="./tmp/services-img-2.png", alt="")
                     .one-services__block-content
-                      h2 Марина Тарабукина
-                      p Косметолог (Стаж 17 лет)
+                      h2
+                        a(href="#!") Акне
                 div
                   .one-services__block
                     .one-services__block-thumb
-                      img(src="./tmp/team-img-3.png", alt="")
+                      a(href="#!")
+                        img(src="./tmp/services-img-3.png", alt="")
                     .one-services__block-content
-                      h2 Майя Закерова
-                      p Врач-косметолог (стаж 15 лет)
+                      h2
+                        a(href="#!") Себорейный дерматит
                 div
                   .one-services__block
                     .one-services__block-thumb
-                      img(src="./tmp/team-img-4.png", alt="")
+                      a(href="#!")
+                        img(src="./tmp/services-img-4.png", alt="")
                     .one-services__block-content
-                      h2 Лариса Юрьева
-                      p Косметолог (стаж 15 лет)
+                      h2
+                        a(href="#!") Атопический дерматит
+                div
+                  .one-services__block
+                    .one-services__block-thumb
+                      a(href="#!")
+                        img(src="./tmp/services-img-5.png", alt="")
+                    .one-services__block-content
+                      h2
+                        a(href="#!") Крапивница
+                div
+                  .one-services__block
+                    .one-services__block-thumb
+                      a(href="#!")
+                        img(src="./tmp/services-img-6.png", alt="")
+                    .one-services__block-content
+                      h2
+                        a(href="#!") Папилломы, кондиломы
 
               a(href="#!").btn.content__btn загрузить еще
 
+              .clear40
 
+              .one-services__taboo
+                h2 Что нельзя делать самостоятельно?
+                table
+                  tbody
+                    tr
+                      td
+                        .one-services__taboo-plus +
+                      td
+                        p Удалять (механически или купленным в аптеке составом «Чистотел») бородавки, родинки, папилломы, так вы не знаете злокачественное или доброкачественное это новообразование, есть риск получить кровоточащую незаживающую рану;
+                    tr
+                      td
+                        .one-services__taboo-plus +
+                      td
+                        p Самостоятельно назначать себе серьёзные препараты, системные ретиноиды (например, Акнекутан, Роаккутан и др.);
+                    tr
+                      td
+                        .one-services__taboo-plus +
+                      td
+                        p Выбирать в интернете и назначать препараты для наружного использования (кремы, сыворотки, гели), вы можете навредить своей коже, вызвав покраснение, обезвоживание, жжение, чувствительность;
+                    tr
+                      td
+                        .one-services__taboo-plus +
+                      td
+                        p Удалять угри, прыщи (акне), так при надавливании руками вы можете ещё глубже «утопить» гнойное содержимое элемента;
+                    tr
+                      td
+                        .one-services__taboo-plus +
+                      td
+                        p Оставлять без внимания продолжительный зуд или отек, мокнущую, воспаленную кожу;
+                    tr
+                      td
+                        .one-services__taboo-plus +
+                      td
+                        p Самостоятельно отменять себе препараты, так как большинство препаратов в дерматологии имеют накопительный эффект.
+
+              .one-services__possibility
+                h2 Возможность диагностики кожных заболеваний в салоне Визави
+                table
+                  tbody
+                    tr
+                      td
+                        .one-services__possibility-number 1
+                      td
+                        p визуальный осмотр, сбор жалоб и анамнеза, высококвалифицированным дерматологом-косметологом (в частности профессором, кандидатом медицинских наук);
+                    tr
+                      td
+                        .one-services__possibility-number 2
+                      td
+                        p дерматоскопия — это метод диагностики в дерматологии, который заключается в осмотре кожных высыпаний, но вообразований кожи при помощи специального аппарата под увеличением в несколько десятков раз. Полученная картина интерпретируется врачом, что позволяет поставить быстро диагноз, например, оценить доброкачественность родинки и произвести её удаление здесь и сейчас;
+                    tr
+                      td
+                        .one-services__possibility-number 3
+                      td
+                        p диагностическая биопсия — это взятие образца кожного лоскута или новообразования, который готовят специальным образом в лаборатории и изучают под микроскопом для уточнения патологии и подтверждения диагноза. Чаще всего биопсию производят с целью диагностики рака кожи;
+                    tr
+                      td
+                        .one-services__possibility-number 4
+                      td
+                        p микроскопическая диагностика кожи — это метод диагностики, который возможен благодаря лаборатории нашей клиники. Суть метода заключается в том, что проводится диагностический соскоб с патогенной кожи на Демодекс (клещ), грибковые поражения и др. заболевания;
+                    tr
+                      td
+                        .one-services__possibility-number 5
+                      td
+                        p микробиологическая диагностика кожи, или соскоб-посев на патогенную флору с определением чувствительности к антибиотикам, часто в ЦИДК используется для лечения распространённого заболевания акне и помогает «бить точно в цель» при назначении антибиотикотерапии;
+                    tr
+                      td
+                        .one-services__possibility-number 6
+                      td
+                        p аппарат трехмерной визуализации структур кожи Antera 3D – это диагностика, позволяющая в считанные секунды проводить оценку поверхности кожи, создавать и сравнивать 3D- изображения кожи, полученные при помощи полиспектрального анализа. Antera 3D даёт возможность: оценить структуру и рельеф кожи (измерить глубину морщин, пористость, рубцы), и оценить дисхромии кожи (распределение и глубину залегания в коже меланина и гемоглобина). Полученные данные очень важны, так как они повлияют на выбор того или иного лазера, дадут понять, что лучше выбрать контурную пластику или достаточной будет биоревитализации;
+                    tr
+                      td
+                        .one-services__possibility-number 7
+                      td
+                        p трихоскопия на аппарате Aramo SG Skin— это визуальное исследование состояния волос и волосистости части кожи головы с помощью специального прибора (трихоскопа), оборудованного видеокамерой с увеличивающей оптикой. Диагностика на этом уникальном аппарате в ЦИДК определит густоту (плотность) волос; покажет толщину стержня волоса и состояния волосяной кутикулы;
+                    tr
+                      td
+                        .one-services__possibility-number 8
+                      td
+                        p трихограмма (фототрихограмма) на аппарате Aramo SG Skin — это определение на специально подготовленном участке волосяного покрова процентного соотношения волос в различных стадиях роста (анаген, катаген, телоген). Обычно в данном методе делается метка специальным красителем, чтобы оценить эффектность роста волос через определённое время после лечения;
+                    tr
+                      td
+                        .one-services__possibility-number 9
+                      td
+                        p ультразвуковое исследование кожи аппарате последнего поколения в ЦИДК. Позволяет выявить изменение толщины кожи, наличие новообразований( их размеры, распространение в подлежащие ткани, плотность, однородность), признаки отека, присутствие инородных тел - геля, жидкости, воздуха, нитей и т.д., очаги замещения соединительной тканью - фиброза, характер кровоснабжения (усиление, ослабление, присутствие нетипичных или новообразованных сосудов), динамику- изменения во времени образований, включения.
 
     include ./_include/_footer
     //- div(style="height: 1000px; background-color: #000")
